tests/expectations/compiler/core/algorithms/integers/sha3_512/sha3_512_hash_to_u64.out
<<<<<<< HEAD
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:22
     |
  28 |         let a: u64 = SHA3_512::hash_to_u64(addr_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:22
     |
  29 |         let b: u64 = SHA3_512::hash_to_u64(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:22
     |
  30 |         let c: u64 = SHA3_512::hash_to_u64(field_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:22
     |
  31 |         let d: u64 = SHA3_512::hash_to_u64(group_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:22
     |
  32 |         let e: u64 = SHA3_512::hash_to_u64(i8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:22
     |
  33 |         let f: u64 = SHA3_512::hash_to_u64(i16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:22
     |
  34 |         let g: u64 = SHA3_512::hash_to_u64(i32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:22
     |
  35 |         let h: u64 = SHA3_512::hash_to_u64(i64_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:22
     |
  36 |         let i: u64 = SHA3_512::hash_to_u64(i128_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:22
     |
  37 |         let j: u64 = SHA3_512::hash_to_u64(u8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:22
     |
  38 |         let k: u64 = SHA3_512::hash_to_u64(u16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:22
     |
  39 |         let l: u64 = SHA3_512::hash_to_u64(u32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:22
     |
  40 |         let m: u64 = SHA3_512::hash_to_u64(u64_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:22
     |
  41 |         let n: u64 = SHA3_512::hash_to_u64(u128_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:22
     |
  42 |         let o: u64 = SHA3_512::hash_to_u64(scalar_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:22
     |
  44 |         let q: u64 = SHA3_512::hash_to_u64(Foo { a: 1u128, b: 1u128 });
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
=======
program test.aleo;

function main:
    input r0 as i8.private;
    input r1 as i16.private;
    input r2 as i32.private;
    input r3 as i64.private;
    input r4 as u8.private;
    input r5 as u16.private;
    input r6 as u32.private;
    input r7 as u64.private;
    hash.sha3_512 aleo10qerras5799u6k7rjtc9y3hcwxuykr45qra7x7dp6jgnc0923czqm0lgta into r8 as u64;
    hash.sha3_512 true into r9 as u64;
    hash.sha3_512 1field into r10 as u64;
    hash.sha3_512 1540945439182663264862696551825005342995406165131907382295858612069623286213group into r11 as u64;
    hash.sha3_512 r0 into r12 as u64;
    hash.sha3_512 r1 into r13 as u64;
    hash.sha3_512 r2 into r14 as u64;
    hash.sha3_512 r3 into r15 as u64;
    hash.sha3_512 1i128 into r16 as u64;
    hash.sha3_512 r4 into r17 as u64;
    hash.sha3_512 r5 into r18 as u64;
    hash.sha3_512 r6 into r19 as u64;
    hash.sha3_512 r7 into r20 as u64;
    hash.sha3_512 1u128 into r21 as u64;
    hash.sha3_512 1scalar into r22 as u64;
    output r8 as u64.private;
    output r9 as u64.private;
    output r10 as u64.private;
    output r11 as u64.private;
    output r12 as u64.private;
    output r13 as u64.private;
    output r14 as u64.private;
    output r15 as u64.private;
    output r16 as u64.private;
    output r17 as u64.private;
    output r18 as u64.private;
    output r19 as u64.private;
    output r20 as u64.private;
    output r21 as u64.private;
    output r22 as u64.private;
    output 6542392515491421876u64 as u64.private;
>>>>>>> mainnet
